# eqversion

./: .gitignore  README.rst  pyproject.toml  tox.ini
.github/workflows/: pythonpackage.yml
eqversion/: eqversion.py
tests/: test_eqversion.py
